--- a/wpfTest/wpfTest.csproj
+++ b/wpfTest/wpfTest.csproj
@@ -101,6 +101,7 @@
     <Compile Include="GameLogic\Data\GameStaticData.cs" />
     <Compile Include="GameLogic\Maps\BfsPathfinding.cs" />
     <Compile Include="GameLogic\Maps\IPathfinding.cs" />
+    <Compile Include="GameLogic\Maps\MapLoader.cs" />
     <Compile Include="GameLogic\Maps\PushingMap.cs" />
     <Compile Include="GameLogic\Data\Entities\Structure.cs" />
     <Compile Include="GameLogic\CommandAssignment.cs" />
@@ -229,6 +230,21 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Images\atlas0.xml">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+  <ItemGroup />
+  <ItemGroup>
+    <None Include="Images\NewMap\biomes.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="Images\NewMap\buildings.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="Images\NewMap\nutrients.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="Images\NewMap\terrain.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
   </ItemGroup>
