ChargeTo now always frees the animal after it's done, roots of tree are now removed from the map after the tree dies, maploader can plant buildings correctly.

--- a/wpfTest/wpfTest.csproj
+++ b/wpfTest/wpfTest.csproj
@@ -210,7 +210,9 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="GameLogic\AI\" />
+  </ItemGroup>
   <ItemGroup>
     <None Include="Images\NewMap\biomes.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
