--- a/GameLogicTests/GameLogicTests.csproj
+++ b/GameLogicTests/GameLogicTests.csproj
@@ -54,6 +54,12 @@
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\SanguineGenesis\SanguineGenesis.csproj">
+      <Project>{2faea7ca-b0cb-468f-b355-d64c601e4abd}</Project>
+      <Name>SanguineGenesis</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
