--- a/GameLogicTests/packages.config
+++ b/GameLogicTests/packages.config
@@ -1,5 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="GlmNet" version="0.7.0" targetFramework="net461" />
   <package id="MSTest.TestAdapter" version="1.2.0" targetFramework="net461" />
   <package id="MSTest.TestFramework" version="1.2.0" targetFramework="net461" />
+  <package id="SharpGL" version="2.4.1.2" targetFramework="net461" />
+  <package id="SharpGL.SceneGraph" version="2.4.1.2" targetFramework="net461" />
+  <package id="SharpGL.WinForms" version="2.4.1.2" targetFramework="net461" />
+  <package id="SharpGLCore" version="2.4.0.0" targetFramework="net461" />
 </packages>
