--- a/SanguineGenesis/SanguineGenesis.csproj
+++ b/SanguineGenesis/SanguineGenesis.csproj
@@ -148,7 +148,7 @@
     <Compile Include="GUI\OpenGL\ImageAtlas.cs" />
     <Compile Include="GUI\OpenGL\OpenGLAtlasDrawer.cs" />
     <Compile Include="GameLogic\Physics.cs" />
-    <Compile Include="GameLogic\Player.cs" />
+    <Compile Include="GameLogic\Faction.cs" />
     <Compile Include="GameLogic\Maps\PushingMapGenerator.cs" />
     <Compile Include="GameLogic\Rect.cs" />
     <Compile Include="GameControls\EntityCommandsInput.cs" />
