Buildings can be added to the map in the editor, map can be saved, loaded and deleted, improved controls of the editor.

--- a/SanguineGenesis/SanguineGenesis.csproj
+++ b/SanguineGenesis/SanguineGenesis.csproj
@@ -240,6 +240,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="GameLogic\AI\" />
+    <Folder Include="Maps\" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Images\NewMap\buildings.png">
