--- a/SanguineGenesis/SanguineGenesis.csproj
+++ b/SanguineGenesis/SanguineGenesis.csproj
@@ -92,7 +92,6 @@
     <Compile Include="GameLogic\Data\Abilities\SetRallyPoint.cs" />
     <Compile Include="GameLogic\Data\Abilities\Spawn.cs" />
     <Compile Include="GameLogic\Data\Abilities\Ability.cs" />
-    <Compile Include="GameLogic\AnimationState.cs" />
     <Compile Include="GameLogic\Data\Entities\Building.cs" />
     <Compile Include="GameLogic\Data\Entities\Corpse.cs" />
     <Compile Include="GameLogic\Data\Entities\EntityFactory.cs" />
@@ -101,22 +100,22 @@
     <Compile Include="GameLogic\Data\Statuses\Statuses.cs" />
     <Compile Include="GameLogic\Data\Statuses\StatusFactory.cs" />
     <Compile Include="GameLogic\Data\Entities\Unit.cs" />
-    <Compile Include="GameLogic\Data\GameStaticData.cs" />
-    <Compile Include="GameLogic\Maps\BfsPathfinding.cs" />
-    <Compile Include="GameLogic\Maps\IPathfinding.cs" />
+    <Compile Include="GameLogic\Data\GameData.cs" />
+    <Compile Include="GameLogic\Maps\MovementGenerating\BfsPathfinding.cs" />
+    <Compile Include="GameLogic\Maps\MovementGenerating\IPathfinding.cs" />
     <Compile Include="GameLogic\Maps\MapLoader.cs" />
     <Compile Include="GameLogic\Maps\PushingMap.cs" />
     <Compile Include="GameLogic\Data\Entities\Structure.cs" />
-    <Compile Include="GameLogic\CommandAssignment.cs" />
+    <Compile Include="GameLogic\Maps\MovementGenerating\CommandAssignment.cs" />
     <Compile Include="GameLogic\GameplayOptions.cs" />
-    <Compile Include="GameLogic\MovementGenerator.cs" />
+    <Compile Include="GameLogic\Maps\MovementGenerating\MovementGenerator.cs" />
     <Compile Include="GameLogic\Data\Entities\Tree.cs" />
     <Compile Include="GameLogic\Data\Entities\Animal.cs" />
-    <Compile Include="GameLogic\View.cs" />
-    <Compile Include="GameLogic\VisibilityGenerator.cs" />
-    <Compile Include="GameLogic\Maps\RayPathfinding.cs" />
+    <Compile Include="GameLogic\Maps\Vector2.cs" />
+    <Compile Include="GameLogic\Maps\VisibilityGenerating\VisibilityGenerator.cs" />
+    <Compile Include="GameLogic\Maps\MovementGenerating\RayPathfinding.cs" />
     <Compile Include="GameLogic\Maps\Ray.cs" />
-    <Compile Include="GameLogic\Maps\VisibilityMap.cs" />
+    <Compile Include="GameLogic\Maps\VisibilityGenerating\VisibilityMap.cs" />
     <Compile Include="GUI\ColorExtensionMethods.cs" />
     <Compile Include="GUI\MainMenuWindow.cs">
       <SubType>Form</SubType>
@@ -133,11 +132,11 @@
     <Compile Include="GUI\WinFormsComponents\AdditionalInfo.cs">
       <SubType>Component</SubType>
     </Compile>
-    <Compile Include="GameLogic\Maps\FlowMap.cs" />
-    <Compile Include="GameControls\GameControls.cs" />
+    <Compile Include="GameLogic\Maps\MovementGenerating\FlowField.cs" />
+    <Compile Include="GameControl\GameControls.cs" />
     <Compile Include="GameLogic\GameQuerying.cs" />
-    <Compile Include="GameControls\SelectedGroup.cs" />
-    <Compile Include="GameLogic\Command.cs" />
+    <Compile Include="GameControl\SelectedGroup.cs" />
+    <Compile Include="GameLogic\Data\Abilities\Command.cs" />
     <Compile Include="GUI\WinFormsComponents\ButtonArray.cs">
       <SubType>Component</SubType>
     </Compile>
@@ -149,9 +148,9 @@
     </Compile>
     <Compile Include="GUI\IRectangle.cs" />
     <Compile Include="GameLogic\Maps\IMap.cs" />
-    <Compile Include="GameControls\MapMovementInput.cs" />
-    <Compile Include="GameControls\MapSelectorFrame.cs" />
-    <Compile Include="GameControls\MapView.cs" />
+    <Compile Include="GameControl\MapMovementInput.cs" />
+    <Compile Include="GameControl\MapSelectorFrame.cs" />
+    <Compile Include="GameControl\MapView.cs" />
     <Compile Include="GameLogic\Maps\ObstacleMap.cs" />
     <Compile Include="GUI\OpenGL\ImageAtlas.cs" />
     <Compile Include="GUI\OpenGL\OpenGLAtlasDrawer.cs" />
@@ -159,7 +158,7 @@
     <Compile Include="GameLogic\Faction.cs" />
     <Compile Include="GameLogic\Maps\PushingMapGenerator.cs" />
     <Compile Include="GameLogic\Rect.cs" />
-    <Compile Include="GameControls\EntityCommandsInput.cs" />
+    <Compile Include="GameControl\EntityCommandsInput.cs" />
     <Compile Include="GameLogic\Terrain.cs" />
     <Compile Include="GameLogic\Data\Entities\Entity.cs" />
     <Compile Include="GUI\WinFormsComponents\GameMenu.cs">
